transpiler/internal/tests/types/soundness/mep5_p01_list_elements_disagree.mochi
// MEP-5 P1: list literals with disagreeing element types must be rejected.
// The prior rule silently widened to `any`, hiding the soundness hole.
let xs = [1, "two"]
